package sample.models;

import java.util.Timer;

public class MainModel {
    private Timer timer1;
    private Timer timer2;
    private Timer timer3;
    private int int1;
    private int int2;
    private int int3;

    public Timer getTimer1() {
        return timer1;
    }

    public void setTimer1(Timer timer1) {
        this.timer1 = timer1;
    }

    public Timer getTimer2() {
        return timer2;
    }

    public void setTimer2(Timer timer2) {
        this.timer2 = timer2;
    }

    public Timer getTimer3() {
        return timer3;
    }

    public void setTimer3(Timer timer3) {
        this.timer3 = timer3;
    }

    public int getInt1() {
        return int1;
    }

    public void setInt1(int int1) {
        this.int1 = int1;
    }

    public int getInt2() {
        return int2;
    }

    public void setInt2(int int2) {
        this.int2 = int2;
    }

    public int getInt3() {
        return int3;
    }

    public void setInt3(int int3) {
        this.int3 = int3;
    }
}
